--- a/src/styles/HallBooking.css
+++ b/src/styles/HallBooking.css
@@ -6,7 +6,7 @@
 }
 
 h1 {
-    font-size: 2.5em;
+    font-size: 2rem;
     margin-bottom: 20px;
     color: black; /* Set text color to black for the heading */
 }
